--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "taoland",
+  "name": "peanut",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "yangyuetao",
+  "author": "wangchenxu",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -16,6 +16,7 @@
   "dependencies": {
     "async-validator": "^1.8.2",
     "axios": "^0.18.0",
+    "babel-eslint": "^10.1.0",
     "cors": "^2.8.4",
     "deepmerge": "^2.0.1",
     "element-ui": "^2.0.10",
@@ -23,6 +24,7 @@
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.2.0",
     "mavon-editor": "^2.4.16",
+    "mongodb": "^4.0.1",
     "mongoose": "^5.0.6",
     "vue": "^2.5.2",
     "vue-hot-reload-api": "^2.2.4",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^1.3.6",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -57,16 +60,18 @@
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^3.0.0",
+    "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^9.11.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-minifier": "^3.5.9",
     "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^2.0.6",
     "jest": "^21.2.0",
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
@@ -103,5 +108,9 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "eslintConfig": {
+    "extends": "airbnb-base",
+    "parser": "babel-eslint"
+  }
 }
