--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "author": "wangchenxu",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "build": "node build/build.js"
+    "dev:server": "node server/index.js",
+    "dev:client": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "start:server": "cd server && pm2 start ecosystem.config.js --env production",
+    "start:client": "webpack --config build/webpack.prod.conf.js",
+    "start": "concurrently \"npm run start:server\" \"npm run start:client\""
   },
   "dependencies": {
     "async-validator": "^1.8.2",
@@ -52,6 +51,7 @@
     "chalk": "^2.0.1",
     "chromedriver": "^2.46.0",
     "compression-webpack-plugin": "^1.1.11",
+    "concurrently": "^8.1.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.8",
