--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:server": "node server/index.js",
     "dev:client": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "start:server": "cd server && pm2 start ecosystem.config.js --env production",
+    "start:server": "cd server && node index.js",
     "start:client": "webpack --config build/webpack.prod.conf.js",
     "start": "concurrently \"npm run start:server\" \"npm run start:client\""
   },
